tests/fixtures/invalid/pow_list_none_set.py
# Cannot call pow() with List[int], None, Set[int]
x = pow([1, 2, 3], None, {1, 2, 3})
